syntax = "proto3";
package dtd.api.dbm.v1.dbm;

option go_package = "github.com/weltcorp/dtx-lib-proto/go-api/dbm/v1/dbm";

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

service DbmData {
  rpc RecordDbm(Dbm) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/dbm", body: "*" };
  }
}

message Dbm {
  string os =1;
  Category category =2;
  string userId = 3;
  string timestamp = 4;
  string domainId = 5;
  string projectId = 6;
  optional AccessCode accessCode = 7;
  string status = 8;
  string osEnv = 9;
  string version = 10;
}

message Category {
  string value = 1;
  repeated Source sources = 2;
}

message Source {
  string value = 1;
  string hardwareVersion = 2;
  repeated Kind kinds = 3;
  string softwareVersion = 4;
  string deviceName = 5;
  string bundleIdentifier = 6;
  string hardwareName = 7;
}

message AccessCode {
  string code = 1;
  string siteId = 2;
  string groupId = 3;
}

message Kind {
  string stepCount = 1;
  string distance = 2;
  string heartRate = 3;
  string sleepState = 4;
  string walkingSpeed = 5;
  string walkingStepLength = 6;
  string date = 7;
  string latitude = 8;
  string longitude = 9;
  string floor = 10;
  string accuracy = 11;
  string horizontalAccuracy = 12;
  string altitude = 13;
  string verticalAccuracy = 14;
  string speed = 15;
  string speedAccuracy = 16;
  string course = 17;
  string courseAccuracy = 18;
  string time = 19;
  string bearing = 20;
  string duration = 21;
  string steps = 22;
  string startTime = 23;
  string endTime = 24;
  string startDate = 25;
  string endDate = 26;
}